syntax = "proto3";

package zitadel.health.v1;

option go_package = "github.com/zitadel/zitadel/pkg/grpc/health/v1;health";

// Health service for checking system status
service HealthService {
  // Check returns the current health status
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse) {}
  
  // Watch allows clients to watch for health status changes
  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse) {}
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  
  ServingStatus status = 1;
}
